# fcitx-table-cjeb

./: CMakeLists.txt  README.md  cjeb.conf.in  cjeb.txt  erbi.conf  erbi.main.dict  erbi_single.conf
old/: convert.sh  erbi.mb  erbi.txt  erbi_single.mb  erbi_single.txt
po/: fcitx5-table-erbi.pot  zh_CN.mo  zh_CN.po
